# proyecto_final

./: CMakeLists.txt  package.xml
launch/: simulation.launch
launch/include/: gazebo_launch.launch  puzzlebot_gazebo.launch  robot_in_gazebo.launch  start_mapping_2d.launch  start_navigating_2d.launch
launch/include/rviz/: rviz_launch_2d.launch  rviz_launch_nav_2d.launch
meshes/: a.dae
puzzlebot_examples/: CMakeLists.txt  package.xml
puzzlebot_examples/config/: square_gazebo.yaml  square_real_robot.yaml  square_rviz.yaml
puzzlebot_examples/include/puzzlebot_examples/: PIDController.hpp  Shared.hpp
puzzlebot_examples/launch/: square_gazebo.launch  square_real_robot.launch  square_rviz.launch  teleop_gazebo.launch  teleop_real_robot.launch  teleop_rviz.launch
puzzlebot_examples/src/: PIDController.cpp  square.cpp
puzzlebot_gazebo/launch/: puzzlebot_colors.launch  puzzlebot_gazebo.launch  puzzlebot_wood_track.launch  puzzlebotwithlidar.launch
puzzlebot_gazebo/urdf/: puzzlebot_lidar.xacro
puzzlebot_rviz/: CMakeLists.txt  package.xml
puzzlebot_rviz/config/: motor.yaml  puzzlebot.yaml
puzzlebot_rviz/include/puzzlebot_rviz/: Motor.hpp  PuzzleBot.hpp  PuzzleBotSim.hpp  Shared.hpp
puzzlebot_rviz/launch/: motor.launch  puzzlebot.launch  puzzlebot_rviz.launch  puzzlebot_sim.launch  test_motor_constants.launch
puzzlebot_rviz/rviz/: puzzlebot_sim.rviz  puzzlebot_sim.urdf
puzzlebot_rviz/src/: Motor.cpp  PIDController.cpp  PuzzleBot.cpp  PuzzleBotSim.cpp  motor_node.cpp  puzzlebot_node.cpp  puzzlebot_sim_node.cpp  test_motor_constants.cpp
puzzlebot_world/models/track/materials/scripts/: wood_track.material
puzzlebot_world/worlds/: color_balls_2.world  color_balls_3.world  wood_track.world
rviz/: map_config_2d.rviz  no_map_config_2d.rviz
worlds/: ADJIC_map.world  path.world
